--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# backend code
+/backend
+
 # dependencies
 /node_modules
 
@@ -32,6 +35,7 @@ yarn-error.log*# See https://help.github.com/articles/ignoring-files/ for more a
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
